--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-# hello-world
-## Andy**DS**
-I'm interested in **Architectural Science**.
+Dr Andy Shea CEng MCIBSE DMS FHEA
+Associate Professor of Building Physics
+University of Bath
+Dept of Architecture & Civil Engineering
+
+a.shea@bath.ac.uk | +44 0 1225 386 158 |
