--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
-Dr Andy Shea CEng MCIBSE DMS FHEA
-Associate Professor of Building Physics
-University of Bath
-Dept of Architecture & Civil Engineering
+<h1 id="hello!">Hello!</h1>
 
-a.shea@bath.ac.uk | +44 0 1225 386 158 |
